--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -12,7 +12,7 @@
     <br>    
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-    <div class="alert alert-danger">
+    <div class="alert {{ messages[1] }}">
         {{ messages[0] }}.
     </div>
     {% endif %}
