--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -13,6 +13,7 @@
         <div class="input-group">
             <label for="lastfm">LAST.FM API Key:&nbsp;&nbsp;</label>
             <input type="text" class="form-control" id="lastfm" name="lastfm" value="{{ config.lastfm }}">
+            <a href="https://www.last.fm/login?next=%2Fapi%2Faccounts%3F_pjax%3D%2523content">&nbsp;&nbsp;Get API Key</a>
         </div>
         <br>
         <button class="btn btn-outline-primary">Update</button>
