--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -44,6 +44,7 @@
         var currentSrc = $("#video").attr("src");
         if (procStep === 1) {
           if (currentSrc === "") {
+            getLatestInfo();
             if (screenData.video_url !== "") {
               procStep = 2;
             }
