--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -12,6 +12,7 @@
 
     var screenData
     var procStep
+    var queueId = ''
 
     function busyWait(delayInMs) {
       let startTime = Date.now();
@@ -26,8 +27,22 @@
           url: "/screenupdate",
           success: function (data) {
             screenData = data
-            $("#overlay-now").text(screenData.singer + ' - ' + screenData.song);
-            $("#overlay-queued").text(screenData.next_singer + ' - ' + screenData.next_song);
+            if (screenData.song === '') {
+              $("#overlay-now").hide();
+              $("#overlay-singing").hide();
+            } else {
+              $("#overlay-now").text(screenData.singer + ' - ' + screenData.song);
+              $("#overlay-now").show();
+              $("#overlay-singing").show();
+            }
+            if (screenData.next_song === '') {
+              $("#overlay-next").hide();
+              $("#overlay-queued").hide();
+            } else {
+              $("#overlay-queued").text(screenData.next_singer + ' - ' + screenData.next_song);
+              $("#overlay-next").show();
+              $("#overlay-queued").show();
+            }
             $("#overlay-presents").text(screenData.singer + ' - ' + screenData.song + ' - ' + screenData.artist);
             procStep = 1;
           },
@@ -44,9 +59,13 @@
         var currentSrc = $("#video").attr("src");
         if (procStep === 1) {
           if (currentSrc === "") {
-            getLatestInfo();
             if (screenData.video_url !== "") {
-              procStep = 2;
+              if (queueId !== screenData.queueid) {
+                queueId = screenData.queueid;
+                procStep = 2;
+              } else {
+                procStep = 4;
+              }
             }
             else {
               procStep = 4;
@@ -64,12 +83,13 @@
         if (procStep === 2) {
           procStep = 3;
           $("#overlay-presents").show();
-          $("#splashImage").show();
+          $("#splashImage").hide();
           $("#video").hide();
           $("#overlay-now").hide();
           $("#overlay-singing").hide();
           $("#overlay-next").hide();
           $("#overlay-queued").hide();
+
         }
         resolve();
       });
@@ -86,20 +106,6 @@
           $("#video").attr("src", screenData.video_url);
           $("#video")[0].load(); // Load the video
           $("#video")[0].play(); // Start playback
-          if (screenData.song === '') {
-            $("#overlay-now").hide();
-            $("#overlay-singing").hide();
-          } else {
-            $("#overlay-now").show();
-            $("#overlay-singing").show();
-          }
-          if (screenData.next_song === '') {
-            $("#overlay-next").hide();
-            $("#overlay-queued").hide();
-          } else {
-            $("#overlay-next").show();
-            $("#overlay-queued").show();
-          }
         }
         resolve();
       });
